[package]
name = "cem"
version = "0.1.0"
authors = ["Leinvedan <fontebasso.lemos@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0"
tungstenite = "0.11.0"
log = "0.4.8"
env_logger = "0.7.1"