[package]
name = "cem"
version = "0.1.0"
authors = ["Leinvedan <fontebasso.lemos@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0"
json-patch = "0.2.6"
tokio-tungstenite = "0.13.0"
tokio = { version = "1.1.0", features = ["full"] }
log = "0.4.8"
env_logger = "0.7.1"
futures = "0.3"
tungstenite = { version = "0.12.0", default-features = false }